--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ video#backgroundVideo {
     top: 0;
     right: 0;
     position: absolute;
-    z-index: -1;
+    z-index: 0;
     width: 100vw;
     height: 100vh;
     object-fit: cover;
